Stub in wav_to_json function and test

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-/venv/
+# From https://github.com/github/gitignore/blob/master/Python.gitignore
+
+__pycache__/
+*.py[cod]
+*$py.class
+
+.cache
+
+venv/
